# investutil-back

./: .env  .env.example  .gitignore  Cargo.toml  README.md
k8s/: configmap.yaml  deployment.yaml  postgres.yaml  secret.yaml.example  service.yaml
migrations/: 20240318000000_create_users_table.sql
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/commands/: mod.rs
src/application/dtos/: auth.rs
src/application/queries/: mod.rs
src/application/services/: auth_service.rs  mod.rs
src/domain/: mod.rs
src/domain/aggregates/: mod.rs
src/domain/entities/: mod.rs  user.rs
src/domain/events/: mod.rs
src/domain/repositories/: user_repository.rs
src/domain/value_objects/: mod.rs
src/handlers/: auth.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/logging/: mod.rs
src/infrastructure/messaging/: mod.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/persistence/postgres/: mod.rs  user_repository.rs
src/interfaces/: mod.rs
src/interfaces/api/: auth.rs  health.rs  mod.rs
src/interfaces/controllers/: mod.rs
src/interfaces/middleware/: mod.rs
src/models/: mod.rs  user.rs
src/routes/: auth.rs  mod.rs
src/services/: auth.rs  mod.rs
tests/: mod.rs
