[package]
name = "investutil-back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.13"

