[package]
name = "investutil-back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
argon2 = "0.5"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"

